cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
set (CMAKE_CXX_STANDARD 14)
set (CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR})
set (CMAKE_CURRENT_BINARY_DIR ${CMAKE_CURRENT_SOURCE_DIR})
message ("CMake install prefix  = ${CMAKE_INSTALL_PREFIX}")
message ("CMake bin dir  = ${CMAKE_INSTALL_PREFIX}")
project (Udacity-LinearAlgebra)
add_executable(test main.cpp vector-op.cpp)
install (TARGETS test DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
